--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+  <title>Portfolio - Prajwal Bhattarai</title>
   <style>
     /* Reset and base styles */
     body {
@@ -16,7 +16,15 @@
       background-color: #282c34;
       color: white;
       text-align: center;
-      padding: 1.5rem;
+      padding: 2rem;
+    }
+    header img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid #61dafb;
+      margin-bottom: 1rem;
     }
     header h1 {
       margin: 0.5rem 0;
@@ -78,7 +86,8 @@
 </head>
 <body>
   <header>
-    <h1>John Doe</h1>
+    <img src="profile.jpg" alt="Prajwal Bhattarai's Profile Picture">
+    <h1>Prajwal Bhattarai</h1>
     <p>IT Student | JavaScript Enthusiast | Node.js, Express.js, TypeScript Expert</p>
   </header>
   <nav>
@@ -91,7 +100,7 @@
     <section id="about">
       <h2>About Me</h2>
       <p>
-        Hi! I'm John Doe, a passionate IT student with a deep interest in web development. My expertise lies in building efficient and scalable web applications using JavaScript, Node.js, Express.js, and TypeScript. I enjoy solving challenging problems and creating elegant solutions.
+        Hi! I'm Prajwal Bhattarai, a passionate IT student with a deep interest in web development. My expertise lies in building efficient and scalable web applications using JavaScript, Node.js, Express.js, and TypeScript. I enjoy solving challenging problems and creating elegant solutions.
       </p>
     </section>
     <section id="skills">
@@ -136,13 +145,13 @@
       <p>
         Have a project in mind or want to connect? Feel free to reach out!
       </p>
-      <p>Email: <a href="mailto:john.doe@example.com">john.doe@example.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/johndoe">linkedin.com/in/johndoe</a></p>
-      <p>GitHub: <a href="https://github.com/johndoe">github.com/johndoe</a></p>
+      <p>Email: <a href="mailto:prajwal.bhattarai@example.com">prajwal.bhattarai@example.com</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/prajwalbhattarai">linkedin.com/in/prajwalbhattarai</a></p>
+      <p>GitHub: <a href="https://github.com/prajwalbhattarai">github.com/prajwalbhattarai</a></p>
     </section>
   </div>
   <footer>
-    <p>&copy; 2024 John Doe | Built with HTML and CSS</p>
+    <p>&copy; 2024 Prajwal Bhattarai | Built with HTML and CSS</p>
   </footer>
 </body>
 </html>
