--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
       <p>
         Have a project in mind or want to connect? Feel free to reach out!
       </p>
-      <p>Email: <a href="mailto:prajwal.bhattarai@example.com">prajwal.bhattarai@example.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/prajwalbhattarai">linkedin.com/in/prajwalbhattarai</a></p>
+      <p>Email: <a href="mailto:prajwalbhattarai80@gmail.com">prajwal.bhattarai@example.com</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/prajwal-bhattarai-3a28a8248/">linkedin.com/in/prajwalbhattarai</a></p>
       <p>GitHub: <a href="https://github.com/prajwalbhattarai">github.com/prajwalbhattarai</a></p>
     </section>
   </div>
